samples/_failures_safe/1761607962_4537e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e86b47c7.c: In function ‘main’:
./samples/SAFE/__tmp_e86b47c7.c:201:5: error: expected declaration or statement at end of input
  201 |     }
      |     ^
